--- a/package.json
+++ b/package.json
@@ -6,21 +6,16 @@
     "@chakra-ui/core": "^0.7.0",
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
-    "@sentry/browser": "5.15.5",
-    "connected-react-router": "^6.8.0",
+    "constate": "^2.0.0",
     "emotion-theming": "^10.0.27",
-    "express": "4.17.1",
     "formik": "^2.1.4",
-    "history": "^4.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-redux": "7.2.0",
+    "react-query": "^1.5.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "redux": "4.0.5",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.1.3",
     "typescript": "^3.8.3",
+    "wretch": "^1.7.2",
     "yup": "^0.28.5"
   },
   "scripts": {
@@ -42,7 +37,6 @@
   "devDependencies": {
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "@types/yup": "^0.28.0",
