--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "formik": "^2.1.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-icons": "^3.10.0",
     "react-query": "^1.5.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
@@ -35,19 +36,18 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@emotion/types": "^0.7.0",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
     "@types/react-router-dom": "^5.1.5",
-    "@types/styled-components": "^5.1.0",
     "@types/yup": "^0.28.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-simple-import-sort": "^5.0.3",
     "husky": "^4.2.5",
     "lint-staged": "^10.1.7",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "typescript": "~3.8.3"
   },
   "husky": {
     "hooks": {
