--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     }
   },
   "lint-staged": {
-    "**/*.(ts, tsx)": [
+    "**/*.{ts, tsx}": [
       "eslint --fix",
       "prettier --write"
     ]
