--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
 
     "prettier/prettier": "error",
     "react/prop-types": "off",
-    "@typescript-eslint/no-unused-vars": "error",
+    "@typescript-eslint/no-unused-vars": "warn",
     "@typescript-eslint/ban-ts-comment": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "react/jsx-sort-props": [
