--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "constate": "^3.1.0",
     "formik": "^2.2.6",
     "framer-motion": "^3.1.1",
+    "qs": "^6.9.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
@@ -47,6 +48,7 @@
   },
   "devDependencies": {
     "@emotion/types": "^0.7.0",
+    "@types/qs": "^6.9.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
@@ -57,6 +59,7 @@
     "husky": "^4.3.6",
     "lint-staged": "^10.5.3",
     "prettier": "^2.2.1",
+    "react-query-devtools": "^2.6.3",
     "typescript": "~4.1.3"
   }
 }
